--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 {% include addtoany.html %}
 
 <div class="related">
-  <h2>Other Posts</h2>
+  <h2>其他文章</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
